dataset1235/2025-2/1955397009/users/1607202972/executions/1107611404_2667036473.log
== RUN (2025-08-19 13:00:27)
-- CODE: 
TempC=float(input("Insira a temperatura em Celsius:"))
Kelvin=TempC+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(round(Kelvin, 2))
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:59:30)
-- CODE: 
TempC=float(intput("Insira a temperatura em Celsius:"))
              Kelvin = TempC+ 273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = TempC+ 273.15
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:00:54)
-- CODE: 
TempC=float(input("Insira a temperatura em Celsius:"))
Kelvin=TempC+273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira a temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira a temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira a temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira a temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira a temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira a temperatura em Celsius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 12:56:17)
-- CODE: 
Celsius=float(intput("Insira a temperatura em Celsius:")
              Kelvin=(Celsius=273.15)
Print(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius=float(intput("Insira a temperatura em Celsius:")
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:58:08)
-- CODE: 
Celsius=float(intput("Insira a temperatura em Celsius:"))
              Kelvin = Celsius+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:58:19)
-- CODE: 
Celsius=float(intput("Insira a temperatura em Celsius:"))
              Kelvin = Celsius + 273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius + 273.15
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:57:34)
-- CODE: 
Celsius=float(intput("Insira a temperatura em Celsius:"))
              Kelvin=Celsius=273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin=Celsius=273.15
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:59:37)
-- CODE: 
TempC=float(intput("Insira a temperatura em Celsius:"))
              Kelvin=TempC+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin=TempC+273.15
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 12:58:03)
-- CODE: 
Celsius=float(intput("Insira a temperatura em Celsius:"))
              Kelvin = Celsius+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = Celsius+273.15
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:00:06)
-- CODE: 
TempC=float(intput("Insira a temperatura em Celsius:"))
Kelvin=TempC+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(intput("Insira a temperatura em Celsius:"))
                ^^^^^^
NameError: name 'intput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:00:18)
-- CODE: 
TempC=float(inputut("Insira a temperatura em Celsius:"))
Kelvin=TempC+273.15
Print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    TempC=float(inputut("Insira a temperatura em Celsius:"))
                ^^^^^^^
NameError: name 'inputut' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:01:09)
-- CODE: 
TempC=float(input("Insira a temperatura em Celsius:"))
Kelvin=TempC+273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira a temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira a temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira a temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira a temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira a temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira a temperatura em Celsius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
